--- a/.github/workflows/workflow-call.yml
+++ b/.github/workflows/workflow-call.yml
@@ -18,4 +18,4 @@ jobs:
     if: ${{ inputs.perform_deploy == 'true' }}
     steps:
       - name: Deploy build to target
-        run: deploy --build ${{ inputs.build_id }} --target ${{ inputs.deploy_target }}
+        run: echo "${{ inputs.build_id }} --target ${{ inputs.deploy_target }}"
