--- a/.github/workflows/workflow-dispatch.yml
+++ b/.github/workflows/workflow-dispatch.yml
@@ -20,6 +20,7 @@ on:
         - windows-latest
         - custom 
       build_id:
+        description: "Build ID"
         required: true
         type: number
 
